fix: Update page name

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Folder Tunnel - Live stream a folder to the web!</title>
+  <title>Folder Tunnels - Live stream a folder to the web!</title>
   <meta name="description" content="Live stream a folder to the web">
   <link rel="stylesheet" href="/index.css" />
   <meta name="author" content="Tyler O'Brien" />
