--- a/static/index.html
+++ b/static/index.html
@@ -12,11 +12,15 @@
 <body>
   <div class="card-container">
     <h1>Folder Tunnels</h1>
+    <p>Quick Explanation: This is intended to expose a folder with a build website to requests on a randomly generated GUID path.</p>
+    <p>Requests with no path (/) are redirected to /index.html.</p>
+    <p>If you don't have any website files, download and extract the sample, and select that directory.</p>
+    <p>If you are using Firefox, you can change the live files and it will serve the latest version.</p>
     <h3>Select a directory to stream:</h3> <br />
     <input id="picker" type="file" webkitdirectory mozdirectory />
     <div>
       <br />
-      <a href="" target="_blank" id="viewWebsiteLink">View Website</a>
+      <a href="" target="_blank" id="viewWebsiteLink">View Your Website</a>
       <a href="https://r2.chaika.me/sample.zip" target="_blank" id="downloadLink" download>Download Sample</a>
       <br />
       <br />
