fix: Bad grammar in explanation

--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="card-container">
     <h1>Folder Tunnels</h1>
-    <p>Quick Explanation: This is intended to expose a folder with a build website to requests on a randomly generated GUID path.</p>
+    <p>Quick Explanation: This is intended to expose a folder with a built website to requests on a randomly generated GUID path.</p>
     <p>Requests with no path (/) are redirected to /index.html.</p>
     <p>If you don't have any website files, download and extract the sample, and select that directory.</p>
     <p>If you are using Firefox, you can change the live files and it will serve the latest version.</p>
